# japan-covid-19-free-testing-center

./: LICENSE  Makefile  README.md  pyproject.toml
data/chiba/: 2022-07-01.csv
data/fukushima/: 2022-07-01.csv
data/hokkaido/: 2022-07-03.csv
data/iwate/: 2022-07-03.csv
data/kanagawa/: 2022-07-04.csv
data/miyagi/: 2022-07-01.csv
data/tokyo/: 2022-07-03.csv
data/toyama/: 2022-06-10.csv
src/: chiba.py  fukushima.py  hokkaido.py  iwate.py  kanagawa.py  miyagi.py  tokyo.py  toyama.py  utils.py
